--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel ./src/index.html",
-    "production": "parcel ./src/index.html"
+    "production": "parcel build ./src/index.html"
   },
   "author": "Azez Nassar",
   "license": "MIT",
